[package]
name = "babyweb"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]

[dependencies]
babystats = { git = "https://github.com/ggriffiniii/babystats" }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1"
serde_derive = "1"
chrono = "0.4.0"
