[package]
name = "babyweb"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]

[dependencies]
babystats = { git = "https://github.com/ggriffiniii/babystats" }
rocket = "0.3.1"
rocket_codegen = "0.3.1"
serde = "1"
serde_derive = "1"
chrono = "0.4.0"

[dependencies.rocket_contrib]
version = "0.3.1"
default-features = false
features = ["json", "tera_templates"]
